# pytest-firefox

./: Makefile  pyproject.toml
.github/workflows/: linux_test.yml  publish.yml
docs/: conf.py
tests/: test_plugin.py
