[tool.poetry]
name = "pytest-firefox"
version = "0.1.0"
description = ""
authors = ["Benjamin Forehand Jr <bforehand@mozilla.com>", "Temidayo Azeez <temidayoazeez032@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-selenium = "^4.1.0"
foxpuppet = "^1.0.5"
mypy = "^1.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=html"

[tool.flake8]
exclude = [".tox", "docs", ".eggs"]
max-line-length = 90

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
